SET(ODE_TARGET org.tizen.ode-app)

INCLUDE_DIRECTORIES(./include)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(tools_pkgs REQUIRED
        dlog
        glib-2.0
	bundle
	ui-gadget-1
	efl-extension
	elementary
	capi-appfw-application
	evas
)

INCLUDE_DIRECTORIES(${tools_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${tools_pkgs_LIBRARY_DIRS})

SET(PKG_NAME "${ODE_TARGET}")
SET(PKG_SRC ./src/ode-app.c)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")

ADD_EXECUTABLE(${PKG_NAME} ${PKG_SRC})
INSTALL(TARGETS ${PKG_NAME} DESTINATION ${APP_INSTALL_PREFIX}/${PKG_NAME}/bin)

TARGET_LINK_LIBRARIES(${PKG_NAME} ${tools_pkgs_LIBRARIES})

#Install app data
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKG_NAME}.xml DESTINATION ${APP_SHARE_PACKAGES_DIR})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared/res/ DESTINATION ${APP_INSTALL_PREFIX}/${PKG_NAME}/shared/res FILES_MATCHING PATTERN "*.png")
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/shared/res/${PKG_NAME}.png DESTINATION ${APP_DESKTOP_ICON_DIR}/org.tizen.ode-app)
